@@ -57,13 +57,15 @@ fun par_list_map_filter_with_timeout _ _ _ _ [] = []
           else
             let val y = f timeout x in
               (case get_time y of
-                SOME time => next_timeout := time
+                SOME time => next_timeout := time_min (time, !next_timeout)
               | _ => ());
               SOME y
             end
         end
     in
-      map_filter I (Par_List.map apply_f xs)
+      chop_groups (Multithreading.max_threads ()) xs
+      |> map (map_filter I o Par_List.map apply_f)
+      |> flat
     end
 
 fun enrich_context_with_local_facts proof ctxt =
